--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ece-app",
   "version": "0.4.0",
   "private": true,
-  "homepage": "http://ucla-ece-report.com/2021-2022",
+  "homepage": "https://ucla-ece-report.com/2021-2022",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
